fix(selector prefix): Implemented selector prefix `csr-` for relevant classes

--- a/src/sc5-styleguide/themes.sc5.scss
+++ b/src/sc5-styleguide/themes.sc5.scss
@@ -5,16 +5,16 @@ Different themes for the star rating component. Easy to use as single modifier.
 Some themes expect a special background to look good.
 For demo-purpos the theme-[name]-gb classes are created.
 
-default                 - default theme
-.theme-rolling-stars    - animate stars
-.theme-kununu           - kununu theme
-.theme-google-places    - google-places theme
+default                         - default theme
+.theme-rolling-stars            - animate stars
+.theme-box                      - box theme
+.theme-google-places            - google-places theme
 
    markup:
-   <div ng-init="data.rating=3" class="rating value-{{data.rating}} half {$modifiers}" >
-   <div class="label-value">{{data.rating}},57</div>
-    <div class="star-container">
-      <div class="star custom-icon" ng-repeat="i in [1,2,3,4,5] track by $index"  ng-click="data.rating = $index">
+   <div ng-init="data.rating=3" class="csr-rating value-{{data.rating}} half {$modifiers}" >
+   <div class="csr-label-value">{{data.rating}},57</div>
+    <div class="csr-star-container">
+      <div class="csr-star custom-icon" ng-repeat="i in [1,2,3,4,5] track by $index"  ng-click="data.rating = $index">
         <i class="star-empty fa fa-star-o"></i>
         <i class="star-half fa fa-star-half-o"></i>
         <i class="star-filled fa fa-star"></i>
@@ -38,21 +38,21 @@ All icons should lay exactly on top of each other.
 none                    - displays the default star element (empty)
 
 markup:
-<div class="star icon show-all">
+<div class="csr-star icon show-all">
   <svg class="star-empty">
       <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="assets/images/star-rating.icons.svg#star-empty"></use>
   </svg>
   <i class="star-empty fa fa-star-o"></i>
   <i class="star-empty"></i>
 </div>
-<div class="star star-half show-all">
+<div class="csr-star star-half show-all">
   <svg class="star-half">
       <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="assets/images/star-rating.icons.svg#star-half"></use>
   </svg>
   <i class="star-half fa fa-star-half-o"></i>
   <i class="star-half"></i>
 </div>
-<div class="star star-filled show-all">
+<div class="csr-star star-filled show-all">
   <svg class="star-filled">
       <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="assets/images/star-rating.icons.svg#star-filled"></use>
   </svg>
