--- a/src/sc5-styleguide/elements.sc5.scss
+++ b/src/sc5-styleguide/elements.sc5.scss
@@ -13,7 +13,7 @@ The star rating component consists of:
 
 markup:
 <b>Star:</b>
-<div class="star half large positive direction-ltr">
+<div class="csr-star half large positive direction-ltr">
   <svg class="star-empty">
       <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="assets/images/star-rating.icons.svg#star-empty"></use>
   </svg>
@@ -25,18 +25,18 @@ markup:
   </svg>
 </div>
 <b>Star Container:</b>
-<div class="star-container direction-rtl">
-  <div class="star icon filled positive large">
+<div class="csr-star-container direction-rtl">
+  <div class="csr-star icon filled positive large">
     <i class="star-empty fa-circle-o"></i>
     <i class="star-half fa fa-check-circle-o"></i>
     <i class="star-filled fa fa-check-circle"></i>
   </div>
-  <div class="star icon filled positive large">
+  <div class="csr-star icon filled positive large">
    <i class="star-empty fa-circle-o"></i>
     <i class="star-half fa fa-check-circle-o"></i>
     <i class="star-filled fa fa-check-circle"></i>
   </div>
-  <div class="star icon empty positive large">
+  <div class="csr-star icon empty positive large">
     <i class="star-empty fa-circle-o"></i>
     <i class="star-half fa fa-check-circle-o"></i>
     <i class="star-filled fa fa-check-circle"></i>
@@ -60,7 +60,7 @@ Star Element
 The Star element.
 
 markup:
-<div class="star icon filled positive large">
+<div class="csr-star icon filled positive large">
   <i class="star-empty"></i>
   <i class="star-half"></i>
   <i class="star-filled"></i>
@@ -80,7 +80,7 @@ none                    - displays the default star element (empty)
 .filled                 - displays the star element as filled
 
 markup:
-<div class="star {$modifiers}">
+<div class="csr-star {$modifiers}">
   <svg class="star-empty">
       <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="assets/images/star-rating.icons.svg#star-empty"></use>
   </svg>
@@ -100,13 +100,14 @@ Star colors
 
 The different star colors.
 
-.default           - Stars is colored default
-.positive          - Stars is colored positive
-.ok            - Stars is colored ok
-.negative          - Stars is colored negative
+none               - Star is colored black
+.default           - Star is colored default
+.positive          - Star is colored positive
+.ok                - Star is colored ok
+.negative          - Star is colored negative
 
 markup:
-<div class="star filled svg {$modifiers}">
+<div class="csr-star filled svg {$modifiers}">
   <svg class="star-empty">
       <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="assets/images/star-rating.icons.svg#star-empty"></use>
   </svg>
@@ -120,7 +121,7 @@ markup:
   <i class="star-half "></i>
   <i class="star-filled "></i>
 </div>
-<div class="star filled icon {$modifiers}">
+<div class="csr-star filled icon {$modifiers}">
   <svg class="star-empty">
       <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="assets/images/star-rating.icons.svg#star-empty"></use>
   </svg>
@@ -134,7 +135,7 @@ markup:
   <i class="star-half "></i>
   <i class="star-filled "></i>
 </div>
-<div class="star filled custom-icon {$modifiers}">
+<div class="csr-star filled custom-icon {$modifiers}">
   <i class="star-empty fa fa-star-o"></i>
   <i class="star-half  fa fa-star-half-o"></i>
   <i class="star-filled  fa fa-star"></i>
@@ -155,7 +156,7 @@ none                  - Stars svg icon is used
 .custom-icon          - Stars character icon is used
 
 markup:
-<div class="star empty {$modifiers}">
+<div class="csr-star empty {$modifiers}">
   <svg class="star-empty">
       <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="assets/images/star-rating.icons.svg#star-empty"></use>
   </svg>
@@ -169,7 +170,7 @@ markup:
   <i class="star-half fa fa-star-half-o"></i>
   <i class="star-filled fa fa-star"></i>
 </div>
-<div class="star half {$modifiers}">
+<div class="csr-star half {$modifiers}">
   <svg class="star-empty">
       <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="assets/images/star-rating.icons.svg#star-empty"></use>
   </svg>
@@ -183,7 +184,7 @@ markup:
   <i class="star-half fa fa-star-half-o"></i>
   <i class="star-filled fa fa-star"></i>
 </div>
-<div class="star filled {$modifiers}">
+<div class="csr-star filled {$modifiers}">
   <svg class="star-empty">
       <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="assets/images/star-rating.icons.svg#star-empty"></use>
   </svg>
@@ -211,7 +212,7 @@ The different star icons.
 .fa.fa-gear           - ionicons star-icon
 
 markup:
-<div class="star half custom-icon">
+<div class="csr-star half custom-icon">
   <i class="star-half {$modifiers}"></i>
 </div>
 
@@ -229,7 +230,7 @@ none                    - displays star in default size (medium)
 .large                  - displays star in large size
 
 markup:
-<div class="star {$modifiers}">
+<div class="csr-star {$modifiers}">
   <svg class="star-empty">
       <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="assets/images/star-rating.icons.svg#star-empty"></use>
   </svg>
@@ -253,7 +254,7 @@ none                    - displays star in normal (medium)
 .disabled               - displays star in disabled state
 
 markup:
-<div class="star half positive {$modifiers}">
+<div class="csr-star half positive {$modifiers}">
   <svg class="star-empty">
       <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="assets/images/star-rating.icons.svg#star-empty"></use>
   </svg>
@@ -276,7 +277,7 @@ none                    - displays star icon in left to right direction. (direct
 .direction-ltr          - displays star icon in left to right direction.
 
 markup:
-<div class="star half {$modifiers}">
+<div class="csr-star half {$modifiers}">
   <svg class="star-empty">
       <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="assets/images/star-rating.icons.svg#star-empty"></use>
   </svg>
@@ -302,18 +303,18 @@ Star Container
 The wrapper container for many stars.
 
 markup:
-<div class="star-container">
-  <div class="star icon filled positive large">
+<div class="csr-star-container">
+  <div class="csr-star icon filled positive large">
     <i class="star-empty"></i>
     <i class="star-half"></i>
     <i class="star-filled"></i>
   </div>
-  <div class="star icon half positive large">
+  <div class="csr-star icon half positive large">
     <i class="star-empty"></i>
     <i class="star-half"></i>
     <i class="star-filled"></i>
   </div>
-  <div class="star icon empty positive large">
+  <div class="csr-star icon empty positive large">
     <i class="star-empty"></i>
     <i class="star-half"></i>
     <i class="star-filled"></i>
@@ -334,8 +335,8 @@ none                    - displays star in left to right direction. (direction-l
 
 
 markup:
-<div class="star-container {$modifiers}">
-  <div class="star filled positive large">
+<div class="csr-star-container {$modifiers}">
+  <div class="csr-star filled positive large">
      <svg class="star-empty">
         <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="assets/images/star-rating.icons.svg#star-empty"></use>
     </svg>
@@ -346,7 +347,7 @@ markup:
         <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="assets/images/star-rating.icons.svg#star-filled"></use>
     </svg>
   </div>
-  <div class="star half positive large">
+  <div class="csr-star half positive large">
    <svg class="star-empty">
         <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="assets/images/star-rating.icons.svg#star-empty"></use>
     </svg>
@@ -357,7 +358,7 @@ markup:
         <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="assets/images/star-rating.icons.svg#star-filled"></use>
     </svg>
   </div>
-  <div class="star empty positive large">
+  <div class="csr-star empty positive large">
    <svg class="star-empty">
         <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="assets/images/star-rating.icons.svg#star-empty"></use>
     </svg>
@@ -383,18 +384,18 @@ none             - stars position at horizontal center.
 .space-around    - stars take all available space to position. Space is only around the stars.
 
 markup:
-<div class="star-container {$modifiers}">
-<div class="star icon filled positive large">
+<div class="csr-star-container {$modifiers}">
+<div class="csr-star icon filled positive large">
   <i class="star-empty"></i>
   <i class="star-half"></i>
   <i class="star-filled"></i>
 </div>
-<div class="star icon half positive large">
+<div class="csr-star icon half positive large">
   <i class="star-empty"></i>
   <i class="star-half"></i>
   <i class="star-filled"></i>
 </div>
-<div class="star icon empty positive large">
+<div class="csr-star icon empty positive large">
   <i class="star-empty"></i>
   <i class="star-half"></i>
   <i class="star-filled"></i>
