--- a/src/scss/_modifiers.scss
+++ b/src/scss/_modifiers.scss
@@ -268,10 +268,10 @@ Rating Component
     .star-container {
       .star {
         svg {
-          fill: $color-default-rating;
+          fill: $color-default-rating !important;
         }
         i {
-          color: $color-default-rating;
+          color: $color-default-rating !important;
         }
       }
     }
@@ -281,10 +281,10 @@ Rating Component
     .star-container {
       .star {
         svg {
-          fill: $color-ok-rating;
+          fill: $color-ok-rating !important;
         }
         i {
-          color: $color-ok-rating;
+          color: $color-ok-rating !important;
         }
       }
     }
@@ -294,10 +294,10 @@ Rating Component
     .star-container {
       .star {
         svg {
-          fill: $color-positive-rating;
+          fill: $color-positive-rating !important;
         }
         i {
-          color: $color-positive-rating;
+          color: $color-positive-rating !important;
         }
       }
     }
@@ -307,10 +307,10 @@ Rating Component
     .star-container {
       .star {
         svg {
-          fill: $color-negative-rating;
+          fill: $color-negative-rating !important;
         }
         i {
-          color: $color-negative-rating;
+          color: $color-negative-rating !important;
         }
       }
     }
