docs(custom-icons): implemented fontawesome for custom icon example

--- a/src/kss-documentation/modifiers.kss.scss
+++ b/src/kss-documentation/modifiers.kss.scss
@@ -1686,9 +1686,9 @@ Styleguide 1.1.6
             <svg class="star-filled">
                 <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="assets/images/star-rating.icons.svg#star-filled"></use>
             </svg>
-            <i class="star-empty fa fa-star-o"></i>
-            <i class="star-half fa fa-star-half-o"></i>
-            <i class="star-filled fa fa-star"></i>
+            <i class="star-empty  fa fa-angle-up"></i>
+            <i class="star-half   fa fa-angle-left"></i>
+            <i class="star-filled fa fa-angle-right"></i>
         </div>
                 <div class="star">
             <svg class="star-empty">
@@ -1700,9 +1700,9 @@ Styleguide 1.1.6
             <svg class="star-filled">
                 <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="assets/images/star-rating.icons.svg#star-filled"></use>
             </svg>
-            <i class="star-empty fa fa-star-o"></i>
-            <i class="star-half fa fa-star-half-o"></i>
-            <i class="star-filled fa fa-star"></i>
+            <i class="star-empty  fa fa-angle-up"></i>
+            <i class="star-half   fa fa-angle-left"></i>
+            <i class="star-filled fa fa-angle-right"></i>
         </div>
                 <div class="star">
             <svg class="star-empty">
@@ -1714,9 +1714,9 @@ Styleguide 1.1.6
             <svg class="star-filled">
                 <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="assets/images/star-rating.icons.svg#star-filled"></use>
             </svg>
-            <i class="star-empty fa fa-star-o"></i>
-            <i class="star-half fa fa-star-half-o"></i>
-            <i class="star-filled fa fa-star"></i>
+            <i class="star-empty  fa fa-angle-up"></i>
+            <i class="star-half   fa fa-angle-left"></i>
+            <i class="star-filled fa fa-angle-right"></i>
         </div>
                 <div class="star">
             <svg class="star-empty">
@@ -1728,9 +1728,9 @@ Styleguide 1.1.6
             <svg class="star-filled">
                 <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="assets/images/star-rating.icons.svg#star-filled"></use>
             </svg>
-            <i class="star-empty fa fa-star-o"></i>
-            <i class="star-half fa fa-star-half-o"></i>
-            <i class="star-filled fa fa-star"></i>
+            <i class="star-empty  fa fa-angle-up"></i>
+            <i class="star-half   fa fa-angle-left"></i>
+            <i class="star-filled fa fa-angle-right"></i>
         </div>
                 <div class="star">
             <svg class="star-empty">
@@ -1742,9 +1742,9 @@ Styleguide 1.1.6
             <svg class="star-filled">
                 <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="assets/images/star-rating.icons.svg#star-filled"></use>
             </svg>
-            <i class="star-empty fa fa-star-o"></i>
-            <i class="star-half fa fa-star-half-o"></i>
-            <i class="star-filled fa fa-star"></i>
+            <i class="star-empty  fa fa-angle-up"></i>
+            <i class="star-half   fa fa-angle-left"></i>
+            <i class="star-filled fa fa-angle-right"></i>
         </div>
     </div>
   </div>
