Add "bp-" prefix to prevent class collapse

--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -3,6 +3,9 @@
 /*VARIABLES
 ====================================================*/
 
+/*Classname of project*/
+$projectClass: "bp";
+
 /*Range*/
 $minRatingValue: 1 !default;
 $maxNumOfStars: 6 !default;
