--- a/src/scss/_modifiers.scss
+++ b/src/scss/_modifiers.scss
@@ -57,7 +57,7 @@ Rating Component
 
       .star-container {
         .star:nth-child(-n+#{$i}) {
-          @extend .star.filled
+          @extend .star, .filled
         }
 
         .star {
@@ -232,9 +232,9 @@ Rating Component
     direction: rtl;
 
     .star-container {
-      @extend .star-container.direction-rtl;
+      @extend .star-container, .direction-rtl;
       .star {
-        @extend .star.direction-rtl;
+        @extend .star, .direction-rtl;
       }
     }
   }
@@ -245,44 +245,44 @@ Rating Component
   /* Star Type
   ====================================================*/
   &.star-icon {
-    @extend .star.icon;
+    @extend .star, .icon;
   }
   &.star-custom-icon {
-    @extend .star.custom-icon;
+    @extend .star, .custom-icon;
   }
   &.star-svg {
-    @extend .star.svg;
+    @extend .star, .svg;
   }
 
   /* Sizes
   ==========================================================*/
   &.small {
     .star {
-      @extend .star.small;
+      @extend .star, .small;
     }
 
     .label-value {
-      @extend .label-value.small;
+      @extend .label-value, .small;
     }
   }
 
   &.medium {
     .star {
-      @extend .star.medium;
+      @extend .star, .medium;
     }
 
     .label-value {
-      @extend .label-value.medium;
+      @extend .label-value, .medium;
     }
   }
 
   &.large {
     .star {
-      @extend .star.large;
+      @extend .star, .large;
     }
 
     .label-value {
-      @extend .label-value.large;
+      @extend .label-value, .large;
     }
   }
 
@@ -290,19 +290,19 @@ Rating Component
   ====================================================*/
   &.space-no {
     .star-container {
-      @extend .star-container.space-no;
+      @extend .star-container, .space-no;
     }
   }
 
   &.space-between {
     .star-container {
-      @extend .star-container.space-between;
+      @extend .star-container, .space-between;
     }
   }
 
   &.space-around {
     .star-container {
-      @extend .star-container.space-around;
+      @extend .star-container, .space-around;
     }
   }
 
@@ -364,11 +364,11 @@ Rating Component
   ====================================================*/
   &.disabled {
     .label-value {
-      @extend .label-value.disabled;
+      @extend .label-value, .disabled;
     }
     .star-container {
       .star {
-        @extend .star.disabled;
+        @extend .star, .disabled;
       }
     }
   }
