--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -36,7 +36,8 @@ $small-label-font-size: 9.5px !default;
 $small-label-line-height: 9.5px !default;
 
 $small-star-width: 10px !default;
-$small-star-height: 9, 5px !default;
+$small-star-height: 9,
+5px !default;
 
 $small-star-font-size: 11px !default;
 $small-star-line-height: 10px !default;
